<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_14sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ralewaymedium"
            android:text="Hastanem"
            android:textColor="@color/turkuaz"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_90sdp"
            android:src="@drawable/profilogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ralewaymedium"
        android:text="Kayıt Ol,"
        android:textColor="@color/turkuaz"
        android:textSize="@dimen/_20ssp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ralewayregular"
        android:text="Bilgilerinizi doldurarak kayıt olabilirsiniz."
        android:textColor="@color/yazigri"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_tc"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/tc_kimlik_no"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_register_name"
        app:startIconDrawable="@drawable/profilusericon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_tc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ralewayregular"
            android:inputType="number"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_name"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/hint_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_register_name"
        app:startIconDrawable="@drawable/profilusericon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ralewayregular"
            android:inputType="text"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_eposta"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/hint_mail"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_login_name"
        app:startIconDrawable="@drawable/profilusericon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_eposta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ralewayregular"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_sifre"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_login_name"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_sifre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ralewayregular"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_login_sifreagain"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/hint_sifretekrar"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_login_name"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_sifreagain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ralewayregular"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_save_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/girisyap"
        android:fontFamily="@font/ralewayregular"
        android:gravity="center"
        android:text="Kayıt Ol"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/ralewaymedium"
        android:gravity="center"
        android:text="Zaten bir hesabın var mı?"
        android:textColor="@color/bottom_gri"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/ralewaymedium"
        android:gravity="center"
        android:text="Giriş Yap"
        android:textColor="@color/turkuaz"
        android:textSize="@dimen/_10ssp" />


</LinearLayout>