<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F8FC"
        tools:context=".view.GeneralSearchFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarGeneralSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turkuaz"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/toolbar_home">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/ralewaymedium"
                android:text="Hastanem"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/logowhite"
                android:layout_marginStart="@dimen/_64sdp"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="-40dp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvAra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/ralewaymedium"
            android:text="Ara,"
            android:textColor="#5A5A5A"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarGeneralSearch" />

        <TextView
            android:id="@+id/tvAramakIstediginiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/ralewayregular"
            android:text="Aramak istediğiniz hastaneyi seçiniz."
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@+id/tvAra"
            app:layout_constraintTop_toBottomOf="@+id/tvAra" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_select_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/choose_city"
            android:textColorHint="@color/gri"
            app:hintTextAppearance="@style/EntityTextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAramakIstediginiz">

            <AutoCompleteTextView
                android:id="@+id/et_select_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_6sdp"
                android:focusable="true"
                android:fontFamily="@font/ralewaymedium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_select_district"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/choose_district"
            android:textColorHint="@color/gri"
            app:hintTextAppearance="@style/EntityTextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_select_city">

            <AutoCompleteTextView
                android:id="@+id/et_select_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_6sdp"
                android:focusable="true"
                android:ems="4"
                android:fontFamily="@font/ralewaymedium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_select_hospital"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:hint="@string/choose_hospital"
            android:textColorHint="@color/gri"
            app:hintTextAppearance="@style/EntityTextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_select_district">

            <AutoCompleteTextView
                android:id="@+id/et_select_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_6sdp"
                android:focusable="true"
                android:fontFamily="@font/ralewaymedium"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/turkuaz"
            android:text="Ara"
            android:textColor="@color/white"
            android:fontFamily="@font/ralewaymedium"
            android:textSize="@dimen/_20ssp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>